gcc/testsuite/rust/rustc/ui/issues/issue-35450.rs
macro_rules! m { ($($t:tt)*) => { $($t)* } }

fn main() {
    m!($t); // { dg-error "" "" { target *-*-* } }
}

